--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ img{
     text-align:initial;
     padding:200px;
     font-size:55px;
-    background-image:url(img/YAMAHA R1M.jpg);
+    background-image:url(img/YAMAHA-R1M.jpg);
     object-fit:fill;
     background-repeat:no-repeat;
     color: #ADFF2F;
