--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,13 @@ footer {
     background-color:#333
     
 }
+
+#how-it-works {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+  }
+  #how-it-works > iframe {
+    max-width: 560px;
+    width: 100%;
+  }
